--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,28 +6,25 @@
         <title>CollaBoard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
         <style>
             * { margin: 0; padding: 0; box-sizing: border-box; }
             body { font: 13px Helvetica, Arial; }
-            form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-            form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-            form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-            #messages { list-style-type: none; margin: 0; padding: 0; }
-            #messages li { padding: 5px 10px; }
-            #messages li:nth-child(odd) { background: #eee; }
             #canvas { border: red solid 5px;}
         </style>
     </head>
     <body>
         <canvas id="canvas" width="400" height="400"></canvas>
+        <button onclick="undo()"> Undo </button>
+        <button onclick="redo()"> Redo </button>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="./script.js"></script>
         <script>
             const socket = io();
             const roomId = "<%= roomId %>"
             const canvas = document.getElementById('canvas');
             const ctx = canvas.getContext('2d');
+            var undoStates = [];
+            var redoStates = [];
+            var currentState = getCanvasState();
 
             var isDrawing = false;
             var mouseX = 0;
@@ -35,6 +32,37 @@
             const bounds = canvas.getBoundingClientRect();
 
             socket.emit('new-user', roomId);
+
+            function undo() {
+                if(undoStates.length > 0) {
+                    redoStates.push(getCanvasState());
+                    var state = undoStates.pop();
+                    currentState = state;
+                    renderCanvasState(state);
+                }
+            }
+
+            function redo() {
+                if(redoStates.length > 0) {
+                    undoStates.push(getCanvasState());
+                    var futurState = redoStates.pop();
+                    currentState = futurState;
+                    renderCanvasState(futurState);
+                }
+            }
+
+            function renderCanvasState(state) {
+                var img = new Image();
+                img.src = state;
+                img.onload = function() { 
+                    ctx.clearRect(0,0,canvas.width,canvas.height);
+                    ctx.drawImage(img,0,0);
+                };
+            }
+
+            function getCanvasState() {
+                return canvas.toDataURL();
+            }
 
             socket.on('draw', (data) => {
                 ctx.beginPath();
@@ -71,6 +99,8 @@
                     isDrawing = false;
                     mouseX = 0;
                     mouseY = 0;
+                    undoStates.push(currentState);
+                    currentState = getCanvasState();
                 }
             });
         </script>
