--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>CollaBoard</title>
 </head>
 <body>
-    <form action="/create" method="post">
+    <form action="/" method="post">
         <button type="submit">Create Room</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 </body>
 </html>
